# BD-C2

./: .dockerignore  .example.env  .gitattributes  .gitignore  Dockerfile  EXEMPLO_LOGIN.md  README.md  docker-compose.yml  postgres.example.env  pyproject.toml  requirements.txt  test_db_conn.py  test_psycopg2.py  test_reset.py
infra/alloy/: config.alloy
infra/app/: locale.gen
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/dashboards/Docker/: 13946_rev5-imported.json  16527_rev2-imported.json  19275_rev1-imported.json  193_rev1-imported.json  19908_rev1-imported.json
infra/grafana/provisioning/dashboards/Host/: 1860_rev42-imported.json
infra/grafana/provisioning/dashboards/Loki/: 17781_rev1-imported.json
infra/grafana/provisioning/dashboards/Prometheus/: 3662_rev2-imported.json
infra/grafana/provisioning/dashboards/Redis/: 763_rev6-imported.json
infra/grafana/provisioning/dashboards/Tempo/: 23242_rev1-imported.json
infra/grafana/provisioning/datasources/: datasources.yaml
infra/loki/: loki.yaml
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yaml
src/: abstract.py  main.py
src/models/: account.py  carrinhoCompra.py  carrinho_compra.py  cliente.py  item_carrinho.py  pedido.py  produto.py
src/sql/account/: login.sql
src/sql/carrinho/: add_item.sql  create_or_get_open.sql  decrement_item.sql  read_items.sql  remove_item.sql
src/sql/cliente/: create.sql  delete.sql  login.sql  read_one.sql  tables.sql  update.sql
src/sql/management/: reset_db.sql  seed_products.sql
src/sql/pedido/: create_from_cart.sql
src/sql/produto/: create.sql  delete.sql  read_all.sql  read_one.sql  update.sql
src/sql/relatorios/: pedidos_por_cliente.sql  produtos_mais_vendidos.sql
src/tests/: conftest.py  test_root_path.py
src/tests/utils/: test_db.py
src/utils/: abstract.py  db.py  validators.py
src/views/: __init__.py  account.py  carrinho.py  cliente.py  management.py  produto.py  relatorios.py
